# Thomas-Jannis-Paul-IMP

./: .gitignore  Fragen.xlsx  README.md  csv-test.csv  csv-test3.csv  main.py  pyproject.toml
files/: Die Geiselnahme von Heilbronn.docx  Fragen (1).xlsx  Fragen.xlsx  Zusammenfassung.docx
