[tool.poetry]
name = "repl_nix_Thomas-Jannis-Paul-IMP"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.23.4"
mpu = "^0.23.1"
pandas = "^1.5.1"
openpyxl = "^3.0.10"
pyflakes = "^2.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
